--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,4 +1,4 @@
-@import "bootstrap/scss/bootstrap";
-@import "react-modal-video/scss/modal-video.scss";
-@import "swiper/css/bundle"; 
-@import '../src/assets/scss/main.scss';
+@use "bootstrap/scss/bootstrap";
+@use "react-modal-video/scss/modal-video.scss";
+@use "swiper/css/bundle"; 
+@use '../src/assets/scss/main.scss';
