--- a/src/assets/scss/utils/_typography.scss
+++ b/src/assets/scss/utils/_typography.scss
@@ -4,9 +4,9 @@ $font-url: 'https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@
 
 @font-face {
     font-family: 'gallery_modernregular';
-    src: url('../fonts/gallerymodern-webfont.woff2') format('woff2'),
-         url('../fonts/gallerymodern-webfont.woff') format('woff'),
-         url('../fonts/gallerymodern-webfont.ttf') format('truetype');
+    src: url('../../fonts/gallerymodern-webfont.woff2') format('woff2'),
+         url('../../fonts/gallerymodern-webfont.woff') format('woff'),
+         url('../../fonts/gallerymodern-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap; // Added for better font loading performance
