--- a/src/assets/scss/utils/_typography.scss
+++ b/src/assets/scss/utils/_typography.scss
@@ -1,15 +1,14 @@
 // font url
-
 $font-url: 'https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800;900&family=Marcellus&family=Syne:wght@400;500;600;700;800&family=Aladin&display=swap';
 
 @font-face {
     font-family: 'gallery_modernregular';
-    src: url('../../fonts/gallerymodern-webfont.woff2') format('woff2'),
-         url('../../fonts/gallerymodern-webfont.woff') format('woff'),
-         url('../../fonts/gallerymodern-webfont.ttf') format('truetype');
+    src: url('/fonts/gallerymodern-webfont.woff2') format('woff2'),
+         url('/fonts/gallerymodern-webfont.woff') format('woff'),
+         url('/fonts/gallerymodern-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-    font-display: swap; // Added for better font loading performance
+    font-display: swap;
 }
 
 // font family
