--- a/src/assets/scss/utils/_typography.scss
+++ b/src/assets/scss/utils/_typography.scss
@@ -33,5 +33,40 @@ $font-size: (
         'p': 16px,
     )
 );
+@font-face {
+    font-family: 'Font Awesome 6 Pro';
+    src: url('/fonts/fa-light-300.woff2') format('woff2'),
+         url('/fonts/fa-light-300.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Font Awesome 6 Pro';
+    src: url('/fonts/fa-regular-400.woff2') format('woff2'),
+         url('/fonts/fa-regular-400.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Font Awesome 6 Pro';
+    src: url('/fonts/fa-solid-900.woff2') format('woff2'),
+         url('/fonts/fa-solid-900.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Font Awesome 6 Brands';
+    src: url('/fonts/fa-brands-400.woff2') format('woff2'),
+         url('/fonts/fa-brands-400.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 
 
